--- a/main.css
+++ b/main.css
@@ -50,10 +50,10 @@ body {
 	color: transparent;
 	text-shadow: 0 1px 0 rgba(251, 250, 244, .5);
 	text-transform: uppercase;
-	width: 33.33333333%;
+	width: 25%;
 }
 
-.btn-group .btn .octicon {
+.btn-group .btn .octicon, .btn-group .btn .fa {
 	margin-right: 7px;
 }
 
