--- a/main.css
+++ b/main.css
@@ -61,8 +61,12 @@ body {
 	background-color: rgba(33, 8, 0, .9);
 }
 
-.cp-perma {
+#plcb {
 	padding: 0 0 0 7px;
+}
+
+.popover.bottom>.arrow:after { /* TODO: change from #fff in custom bootstrap theme */
+	border-bottom-color: rgba(251, 250, 244, .85);
 }
 
 #root {
